Fix rest of overflowing tables

--- a/css/style.css
+++ b/css/style.css
@@ -148,27 +148,27 @@ tr:nth-child(even) td{
 }
 
 /* Provide an overflowing container for the wide table */
-.language-extensions {
+.overflow-table {
   width: 100%;
   margin: 20px 0;
   overflow-x: auto;
   border-left: 1px solid #ddd;
   border-right: 1px solid #ddd;
 }
-.language-extensions table {
+.overflow-table table {
   margin: 0;
 }
-/* Join the table borders with the .language-extensions div borders */
-.language-extensions tr td:first-child,
-.language-extensions tr th:first-child {
+/* Join the table borders with the .overflow-table div borders */
+.overflow-table tr td:first-child,
+.overflow-table tr th:first-child {
   border-left: none;
 }
-.language-extensions tr td:last-child,
-.language-extensions tr th:last-child {
+.overflow-table tr td:last-child,
+.overflow-table tr th:last-child {
   border-right: none;
 }
 /* Hide the stray paragraph tag generated by the build */
-.language-extensions > p {
+.overflow-table > p {
   display: none;
 }
 
